--- a/src/main/resources/templates/config.html
+++ b/src/main/resources/templates/config.html
@@ -5,11 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-CONFIG
-
-
-<form name="logoutForm" th:action="@{/logout}" method="post">
-    <input type="submit" value="sign out">
+<p>CONFIG</p>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="logout">
 </form>
 </body>
 </html>
