--- a/src/main/resources/templates/system.html
+++ b/src/main/resources/templates/system.html
@@ -5,11 +5,9 @@
     <title>Title</title>
 </head>
 <body>
-SYSTEM
-
-
-<form name="logoutForm" th:action="@{/logout}" method="post">
-    <input type="submit" value="sign out">
+<p>SYSTEM</p>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="logout">
 </form>
 </body>
 </html>
