--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,18 +7,14 @@
 </head>
 <body>
 
-
-
-username:<span sec:authentication="principal.username"></span>
-roles:<span sec:authentication="principal.authorities"></span>
-
+Username:<span sec:authentication="principal.username"></span>
+Roles:<span sec:authentication="principal.authorities"></span>
 
 <div sec:authorize="hasRole('ADMIN')">
     <p>
         <a th:href="@{/config}">Config Page</a>
     </p>
 </div>
-
 
 <div sec:authorize="hasRole('MANAGER')">
     <p>
@@ -27,9 +23,8 @@ roles:<span sec:authentication="principal.authorities"></span>
 
 </div>
 
-
-<form name="logoutForm" th:action="@{/logout}" method="post">
-<input type="submit" value="sign out">
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="logout">
 </form>
 </body>
 </html>
